add label for input

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css?3">
 </head>
 <body>
-    <div class="focus-overlay"></div>
+    <label for="kotae" class="focus-overlay"></label>
 
     <div class="rules-link link">
         Инструкция
@@ -23,7 +23,7 @@
 
     <div class="trainer">
         <div class="shitsumon"></div>
-        <input class="kotae" type="text">
+        <input id="kotae" class="kotae" type="text">
     </div>
 
     <div class="tip">
