--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>Тренажёр для хираганы</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" type="text/css" href="css/normalize.css">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/normalize.min.css">
+    <link rel="stylesheet" type="text/css" href="css/style.min.css">
 </head>
 <body>
     <label for="kotae" class="focus-overlay"></label>
@@ -40,6 +40,6 @@
         <div class="ya-share2" data-services="vkontakte,twitter,telegram" data-url="https://vk.com/app5724375"></div>
     </div>
 
-    <script src="js/script.js"></script>
+    <script src="js/script.min.js"></script>
 </body>
 </html>
