--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
     <div class="rules-link link">
         Инструкция
     </div>
+    <div class="dakuten"></div>
     <div class="rules-overlay"></div>
     <div class="rules">
         <div class="close"></div>
         <p>Ваша задача&nbsp;— печатать в&nbsp;поле ввода чтение показываемых символов. Делать это можно как на&nbsp;русском языке, так и&nbsp;используя латиницу.</p>
-        <p>Условие «победы»&nbsp;— 20&nbsp;правильных ответов подряд.</p>
+        <p>В правом верхнем углу есть переключатель, позволяющий добавить озвончённые и&nbsp;полуозвончённые знаки.</p>
+        <p>Условие победы&nbsp;— 20&nbsp;правильных ответов подряд.</p>
     </div>
 
     <div class="trainer">
