--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
         <input id="kotae" class="kotae" type="text">
     </div>
 
-    <div class="tip">
-        <a href="https://plainjapanese.ru/basics/0-1-abc" target="_blank">Найти ответ</a>
-    </div>
+    <a class="tip" href="https://plainjapanese.ru/basics/0-1-abc" target="_blank">Найти ответ</a>
 
     <div class="win-overlay"></div>
     <div class="win">
